--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -66,7 +66,7 @@ $material-tabbar-highlight-color = #26a69a
 $fab-text-color = #ffffff
 $fab-background-color = #13bde2
 
-@import 'onsenui/stylus/components'
+@import 'onsenui/css/onsen-css-components.css'
 
 .list__item__subtitle
   opacity 1
